--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
-baseURL: https://githubuser.github.io
+baseURL: https://karlz97.github.io
 languageCode: en-us
-title: Linus Torvalds
+title: Karlz
 theme: "PaperMod"
 
 params:
@@ -10,7 +10,7 @@ params:
 
   socialIcons: # optional
     - name: "github"
-      url: "https://github.com/XXX"
+      url: "https://github.com/karlz97"
     # - name: "youtube"
     #   url: "https://www.youtube.com/channel/XXX"
     - name: "twitter"
@@ -20,8 +20,8 @@ params:
     # - name: "rss"
     #   url: "https://XXX.github.io/index.xml"
   ShowReadingTime: true
-  author: "Linus Torvalds"
-  contact: "LinusT@example.com"
+  author: "Karl Zhang"
+  contact: "yindingzhang@gmail.com"
   feedlinks: true
   copyright: "<!--Creative Commons License-->This site is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-sa/4.0/).<!--/Creative Commons License-->"
   mobileMenu: true
